# dxmt

./: meson.build  meson.options
.github/workflows/: ci.yml  dxmt-nightly-component.yml  test.yml
docs/: DEVELOPMENT.md
include/: dxmt_gamma.hpp
libs/DXILParser/: DXILParser.cpp  DXILParser.hpp
scripts/: apitrace-mingw-toolchain.cmake  build-apitrace.sh  install-gamehub-test-dxmt.sh
src/: meson.build
src/airconv/: air_signature.hpp  airconv_cli.cpp  airconv_context.cpp  airconv_context.hpp  airconv_dx12_metal4.h  airconv_public.h  dxil_converter.cpp  dxil_converter.hpp  dxso_compile.cpp  dxso_compile.hpp  dxso_decoder.hpp  dxso_header.hpp  meson.build
src/airconv/darwin/: meson.build
src/d3d11/: d3d11.cpp  d3d11_context_def.cpp  d3d11_context_imm.cpp  d3d11_context_impl.cpp  d3d11_device.cpp  d3d11_dxgi_backend.cpp  d3d11_dxgi_backend.hpp  d3d11_dxmt.def  d3d11_stub.cpp  meson.build
src/d3d12/: d3d12.cpp  d3d12.def  d3d12_agility.hpp  d3d12_command_allocator.cpp  d3d12_command_allocator.hpp  d3d12_command_list.cpp  d3d12_command_list.hpp  d3d12_command_queue.cpp  d3d12_command_queue.hpp  d3d12_descriptor_heap.cpp  d3d12_descriptor_heap.hpp  d3d12_device.cpp  d3d12_dxgi_backend.cpp  d3d12_dxgi_backend.hpp  d3d12_fence.cpp  d3d12_fence.hpp  d3d12_interfaces.hpp  d3d12_pipeline.cpp  d3d12_pipeline.hpp  d3d12_query.cpp  d3d12_resource.cpp  d3d12_resource.hpp  d3d12_root_signature.cpp  d3d12_root_signature.hpp  d3d12core.cpp  d3d12core.def  meson.build
src/d3d9/: d3d9.cpp  d3d9_buffer.cpp  d3d9_buffer.hpp  d3d9_common_texture.hpp  d3d9_cube_texture.cpp  d3d9_cube_texture.hpp  d3d9_device.cpp  d3d9_device.hpp  d3d9_diag.hpp  d3d9_enc_state.hpp  d3d9_format.cpp  d3d9_format.hpp  d3d9_fvf.cpp  d3d9_fvf.hpp  d3d9_interface.cpp  d3d9_interface.hpp  d3d9_query.cpp  d3d9_query.hpp  d3d9_shader.cpp  d3d9_shader.hpp  d3d9_state_block.cpp  d3d9_state_block.hpp  d3d9_state_defaults.hpp  d3d9_surface.cpp  d3d9_surface.hpp  d3d9_swapchain.cpp  d3d9_swapchain.hpp  d3d9_tex_debug.cpp  d3d9_tex_debug.hpp  d3d9_texture.cpp  d3d9_texture.hpp  d3d9_trace.cpp  d3d9_trace.hpp  d3d9_validation.hpp  d3d9_vertex_declaration.cpp  d3d9_vertex_declaration.hpp  d3d9_view_cache.hpp  d3d9_volume.cpp  d3d9_volume.hpp  d3d9_volume_texture.cpp  (+2 more)
src/dxgi/: dxgi.cpp  dxgi.def  dxgi_adapter.cpp  dxgi_backend.cpp  dxgi_backend.hpp  dxgi_factory.cpp  dxgi_interfaces.h  dxgi_output.cpp  dxgi_output.hpp  meson.build
src/dxmt/: dxmt_apitrace.cpp  dxmt_apitrace_d3d.hpp  dxmt_command.cpp  dxmt_command.hpp  dxmt_command.metal  dxmt_command_queue.cpp  dxmt_command_queue.hpp  dxmt_context.cpp  dxmt_context.hpp  dxmt_perf_stats.cpp  dxmt_perf_stats.hpp  dxmt_presenter.cpp  dxmt_presenter.hpp  dxmt_queue_waits.hpp  dxmt_ring_bump_allocator.hpp  dxmt_texture.cpp  dxmt_texture.hpp  meson.build
src/nvapi/: nvapi.cpp
src/nvngx/: nvngx_d3d12.cpp
src/util/: util_env.cpp
src/util/com/: com_private_data.hpp
src/util/log/: log.cpp  log.hpp
src/winemetal/: Metal.hpp  airconv_thunks.c  airconv_thunks.h  main.c  winemetal.h  winemetal_thunks.c  winemetal_thunks.h  wineunixlib.h
src/winemetal/unix/: winemetal_unix.c
src/winemetal4/: Metal.hpp  airconv_thunks.c  airconv_thunks.h  meson.build  winemetal.h  winemetal_thunks.c  winemetal_thunks.h
src/winemetal4/unix/: cache.c  meson.build  winemetal_unix.c
tests/: meson.build  run_dxmt_smoke.py
tests/dx12/: dx12_smoke.cpp
tests/dx9/: dx9_smoke.cpp  dx9_smoke.h  meson.build
tests/dx9/smokes/: smoke_begin_end_scene.cpp  smoke_begin_end_scene_gates.cpp  smoke_clear.cpp  smoke_clear_gates.cpp  smoke_clip_plane_gates.cpp  smoke_colorfill.cpp  smoke_colorfill_gates.cpp  smoke_create_buffer.cpp  smoke_create_buffer_gates.cpp  smoke_create_cubetexture.cpp  smoke_create_device.cpp  smoke_create_dxt.cpp  smoke_create_intz.cpp  smoke_create_rendertarget.cpp  smoke_create_texture.cpp  smoke_create_texture_gates.cpp  smoke_depth_test.cpp  smoke_device_probe_gates.cpp  smoke_device_readback_gates.cpp  smoke_draw_gates.cpp  smoke_draw_indexed.cpp  smoke_draw_textured.cpp  smoke_draw_triangle.cpp  smoke_draw_trianglefan.cpp  smoke_drawindexed_up.cpp  smoke_drawprimitive_up.cpp  smoke_dxso_header.cpp  smoke_dynamic_buffer_rename.cpp  smoke_dynamic_texture_lock.cpp  smoke_gamma_ramp_gates.cpp  smoke_get_backbuffer.cpp  smoke_get_device_caps_gates.cpp  smoke_getfrontbufferdata.cpp  smoke_getrendertargetdata.cpp  smoke_intz_dsv_srv.cpp  smoke_lockrect.cpp  smoke_lockrect_gates.cpp  smoke_managed_lockrect.cpp  smoke_offscreen_default_lock.cpp  smoke_present.cpp  (+27 more)
tests/dx9/unit/: meson.build  test_fvf_decl.cpp  test_render_state_defaults.cpp  test_sampler_state_defaults.cpp  test_stream_source_freq.cpp  test_texture_stage_defaults.cpp  test_vertex_decl_validation.cpp
