d3d9_smoke_lib = cpp.find_library('d3d9')

# All smokes/smoke_*.cpp expose a void test_X(void) function and link
# into a single dx9_smoke.exe driven by dx9_smoke.cpp's --list/--filter
# dispatcher (matching dx11_smoke / dx12_smoke). Building one binary
# instead of 50 amortises wine boot + Metal init across the suite —
# wined3d's tests/visual.c uses the same shape, and for the same reason.
d3d9_smoke_sources = files(
  'smokes/smoke_begin_end_scene.cpp',
  'smokes/smoke_begin_end_scene_gates.cpp',
  'smokes/smoke_clear.cpp',
  'smokes/smoke_clear_gates.cpp',
  'smokes/smoke_clip_plane_gates.cpp',
  'smokes/smoke_colorfill.cpp',
  'smokes/smoke_colorfill_gates.cpp',
  'smokes/smoke_create_buffer.cpp',
  'smokes/smoke_create_buffer_gates.cpp',
  'smokes/smoke_create_cubetexture.cpp',
  'smokes/smoke_create_device.cpp',
  'smokes/smoke_create_dxt.cpp',
  'smokes/smoke_create_intz.cpp',
  'smokes/smoke_create_rendertarget.cpp',
  'smokes/smoke_create_texture.cpp',
  'smokes/smoke_create_texture_gates.cpp',
  'smokes/smoke_depth_test.cpp',
  'smokes/smoke_device_probe_gates.cpp',
  'smokes/smoke_device_readback_gates.cpp',
  'smokes/smoke_draw_gates.cpp',
  'smokes/smoke_draw_indexed.cpp',
  'smokes/smoke_draw_textured.cpp',
  'smokes/smoke_draw_triangle.cpp',
  'smokes/smoke_draw_trianglefan.cpp',
  'smokes/smoke_drawindexed_up.cpp',
  'smokes/smoke_drawprimitive_up.cpp',
  'smokes/smoke_dxso_header.cpp',
  'smokes/smoke_dynamic_buffer_rename.cpp',
  'smokes/smoke_gamma_ramp_gates.cpp',
  'smokes/smoke_get_device_caps_gates.cpp',
  'smokes/smoke_get_backbuffer.cpp',
  'smokes/smoke_getfrontbufferdata.cpp',
  'smokes/smoke_getrendertargetdata.cpp',
  'smokes/smoke_intz_dsv_srv.cpp',
  'smokes/smoke_lockrect.cpp',
  'smokes/smoke_lockrect_gates.cpp',
  'smokes/smoke_managed_lockrect.cpp',
  'smokes/smoke_present.cpp',
  'smokes/smoke_query.cpp',
  'smokes/smoke_reset_gates.cpp',
  'smokes/smoke_scissor_rect_gates.cpp',
  'smokes/smoke_set_pixelshader.cpp',
  'smokes/smoke_set_pixelshaderconstant.cpp',
  'smokes/smoke_set_cursor_properties_gates.cpp',
  'smokes/smoke_set_renderstate.cpp',
  'smokes/smoke_set_shader_gates.cpp',
  'smokes/smoke_set_rendertarget.cpp',
  'smokes/smoke_set_samplerstate.cpp',
  'smokes/smoke_set_streamsource.cpp',
  'smokes/smoke_set_texture.cpp',
  'smokes/smoke_set_texturestagestate.cpp',
  'smokes/smoke_set_vertexdeclaration.cpp',
  'smokes/smoke_set_vertexshader.cpp',
  'smokes/smoke_set_vertexshaderconstant.cpp',
  'smokes/smoke_softimpl_gates.cpp',
  'smokes/smoke_set_viewport.cpp',
  'smokes/smoke_setfvf.cpp',
  'smokes/smoke_setmaterial_setlight.cpp',
  'smokes/smoke_settransform.cpp',
  'smokes/smoke_state_block.cpp',
  'smokes/smoke_stretchrect.cpp',
  'smokes/smoke_stretchrect_gates.cpp',
  'smokes/smoke_update_texture_gates.cpp',
  'smokes/smoke_updatesurface.cpp',
)

d3d9_smoke_inc = include_directories('../../src/d3d9', '../../src/airconv')

dx9_smoke = executable('dx9_smoke',
  ['dx9_smoke.cpp'] + d3d9_smoke_sources,
  dependencies        : [ d3d9_smoke_lib ],
  include_directories : [ d3d9_smoke_inc ],
  install             : false,
)

test('dx9-smoke-list', dx9_smoke, args: ['--list'])
